@@ -1,5 +1,11 @@
 2010-09-07  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	* testsuite/29_atomics/atomic/cons/assign_neg.cc: Adjust dg-error
+	line numbers.
+	* testsuite/29_atomics/atomic/cons/copy_neg.cc: Likewise.
+
+2010-09-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR libstdc++/45398
 	* include/std/atomic (atomic<_TP*>::store): Define.
 
